--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <pre class="mermaid">
   graph LR
       A --- B
-      B-->C[fa:fa-ban forbidden]
+      B-->C[fa:fa-ban forbidd]
       B-->D(fa:fa-spinner);
     </pre>
     <script type="module">
