--- a/democlient.html
+++ b/democlient.html
@@ -4,7 +4,7 @@
     <pre class="mermaid">
   graph LR
       A --- B
-      B-->C[fa:fa-ban democlient]
+      B-->C[fa:fa-ban democlienteeeeee]
       B-->D(fa:fa-spinner);
     </pre>
     <script type="module">
