--- a/democlient.html
+++ b/democlient.html
@@ -1,55 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <body>
-    <pre class="mermaid">
-        flowchart LR
-        cICP3{{"Cold Traffic\nICP Reverse Targeting ABM & Titles\nJuly 2024: 0"}}:::blue
-        cICP2{{"Cold Traffic\nGeotargeting\nJuly 2024: 0"}}:::blue
-        cICP1{{"Cold Traffic\nFleet Managers UK\nJuly 2024: 0"}}:::blue
-        cICP4{{"Cold Traffic\nICP 4 Fleet Industries\nJuly 2024: 682"}}:::blue
-        cICP6{{"Cold Traffic\nICP 6 HR Industries\nJuly 2024: 682"}}:::blue
-        cICP5{{"Cold Traffic\nICP 5 Commercial TopMan\nJuly 2024: 684"}}:::blue
-        cICP3 --- cICP3T00C03(" | Single Image | Lead Generation (T00C03)\nClick to see Ads⇗")---882ICP3("June 2024: 625")
-        click cICP3T00C03 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[299842503]" "Go to Ads"
-        cICP3 --- cICP3T00C01(" | Single Image | Website Visits (T00C01)\nClick to see Ads⇗")---880ICP3("June 2024: 400")
-        click cICP3T00C01 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[299797333]" "Go to Ads"
-        cICP3 --- cICP3T00C02(" | Video | Video Views (T00C02)\nClick to see Ads⇗")---881ICP3("June 2024: 300")
-        click cICP3T00C02 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[299814563]" "Go to Ads"
-        cICP2 --- cICP2T07C01(" | Single Image | Website Visits (T07C01)")---605ICP2("May 2024: 300")
-        cICP1 --- cICP1T04C01(" |  | Lead Generation (T04C01)\nClick to see Ads⇗")---876ICP1("June 2024: 625")
-        click cICP1T04C01 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[276945013]" "Go to Ads"
-        cICP1 --- cICP1T02C01(" |  | Website Visits (T02C01)\nClick to see Ads⇗")---874ICP1("June 2024: 350")
-        click cICP1T02C01 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[224973213]" "Go to Ads"
-        cICP1 --- cICP1T03C01(" |  | Video Views (T03C01)\nClick to see Ads⇗")---875ICP1("June 2024: 300")
-        click cICP1T03C01 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[225775393]" "Go to Ads"
-        cICP4 --- cICP4T00C05("Unaware | VV | Fleet | Video | Video Views (T00C05)\nClick to see Ads⇗"):::active---1267ICP4("July 2024: 240")
-        click cICP4T00C05 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318069093]" "Go to Ads"
-        cICP6 --- cICP6T00C06("Unaware | VV | HR | Video | Video Views (T00C06)\nClick to see Ads⇗"):::active---1268ICP6("July 2024: 240")
-        click cICP6T00C06 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318078783]" "Go to Ads"
-        cICP5 --- cICP5T00C07("Unaware | VV | Commercial Heads | Video | Video Views (T00C07)\nClick to see Ads⇗"):::active---1269ICP5("July 2024: 240")
-        click cICP5T00C07 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318069413]" "Go to Ads"
-        cICP4 --- cICP4T00C08("Unaware | WV | Fleet | Single Image | Website Visits (T00C08)")---1270ICP4("July 2024: 442")
-        cICP6 --- cICP6T00C09("Unaware | WV | HR | Single Image | Website Visits (T00C09)")---1271ICP6("July 2024: 442")
-        cICP5 --- cICP5T00C10("Unaware | WV | Commercial Heads | Single Image | Website Visits (T00C10)")---1272ICP5("July 2024: 444")
-        w0{{"Warm Retargeting\nAll Custom Audiences\nJuly 2024: 900"}}:::orange_stroke
-        w0---w0T00C04(" | Single Image | Engagement (T00C04)\nClick to see Ads⇗")---883T00C040("June 2024: 350")
-        click w0T00C04 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[302581213]" "Go to Ads"
-        w0---w0T00C11("Aware | LG | Commercial TopMan  | Single Image | Lead Generation (T00C11)")---1299T00C110("July 2024: 300")
-        w0---w0T00C12("Aware | LG | Fleet | Document | Lead Generation (T00C12)\nClick to see Ads⇗"):::active---1300T00C120("July 2024: 300")
-        click w0T00C12 "https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318544423]" "Go to Ads"
-        w0---w0T00C13("Aware | LG | HR | Single Image | Lead Generation (T00C13)")---1301T00C130("July 2024: 300")
-        
-        
-        classDef blue stroke:#2374f7,stroke-width:3px
-        classDef orange_stroke stroke:#fc822b,stroke-width:3px
-        classDef red_stroke stroke:#ed2633,stroke-width:3px
-        classDef pink fill:#eb3dd6,stroke:#000,stroke-width:1px,color:#fff
-        classDef paused fill:#fabe08,stroke:#000,stroke-width:1px,color:#fff
-        classDef red fill:#ed2633,stroke:#000,stroke-width:1px,color:#fff
-        classDef active fill:#46af16,stroke:#000,stroke-width:1px,color:#fff
-    </pre>
-    <script type="module">
-      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-    </script>
-  </body>
-</html>
+<!DOCTYPE html>\n<html lang=\"en\">\n\t<body>\n\t\t<pre class=\"mermaid\">\nflowchart LR\ncICP3{{\"Cold Traffic\\nICP Reverse Targeting ABM & Titles\\nJuly 2024: 0\"}}:::blue\ncICP2{{\"Cold Traffic\\nGeotargeting\\nJuly 2024: 0\"}}:::blue\ncICP1{{\"Cold Traffic\\nFleet Managers UK\\nJuly 2024: 0\"}}:::blue\ncICP4{{\"Cold Traffic\\nICP 4 Fleet Industries\\nJuly 2024: 682\"}}:::blue\ncICP6{{\"Cold Traffic\\nICP 6 HR Industries\\nJuly 2024: 682\"}}:::blue\ncICP5{{\"Cold Traffic\\nICP 5 Commercial TopMan\\nJuly 2024: 684\"}}:::blue\ncICP3 --- cICP3T00C03(\" | Single Image | Lead Generation (T00C03)\\nClick to see Ads⇗\")---882ICP3(\"June 2024: 625\")\nclick cICP3T00C03 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[299842503]\" \"Go to Ads\"\ncICP3 --- cICP3T00C01(\" | Single Image | Website Visits (T00C01)\\nClick to see Ads⇗\")---880ICP3(\"June 2024: 400\")\nclick cICP3T00C01 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[299797333]\" \"Go to Ads\"\ncICP3 --- cICP3T00C02(\" | Video | Video Views (T00C02)\\nClick to see Ads⇗\")---881ICP3(\"June 2024: 300\")\nclick cICP3T00C02 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[299814563]\" \"Go to Ads\"\ncICP2 --- cICP2T07C01(\" | Single Image | Website Visits (T07C01)\")---605ICP2(\"May 2024: 300\")\ncICP1 --- cICP1T04C01(\" |  | Lead Generation (T04C01)\\nClick to see Ads⇗\")---876ICP1(\"June 2024: 625\")\nclick cICP1T04C01 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[276945013]\" \"Go to Ads\"\ncICP1 --- cICP1T02C01(\" |  | Website Visits (T02C01)\\nClick to see Ads⇗\")---874ICP1(\"June 2024: 350\")\nclick cICP1T02C01 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[224973213]\" \"Go to Ads\"\ncICP1 --- cICP1T03C01(\" |  | Video Views (T03C01)\\nClick to see Ads⇗\")---875ICP1(\"June 2024: 300\")\nclick cICP1T03C01 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[225775393]\" \"Go to Ads\"\ncICP4 --- cICP4T00C05(\"Unaware | VV | Fleet | Video | Video Views (T00C05)\\nClick to see Ads⇗\"):::active---1267ICP4(\"July 2024: 240\")\nclick cICP4T00C05 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318069093]\" \"Go to Ads\"\ncICP6 --- cICP6T00C06(\"Unaware | VV | HR | Video | Video Views (T00C06)\\nClick to see Ads⇗\"):::active---1268ICP6(\"July 2024: 240\")\nclick cICP6T00C06 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318078783]\" \"Go to Ads\"\ncICP5 --- cICP5T00C07(\"Unaware | VV | Commercial Heads | Video | Video Views (T00C07)\\nClick to see Ads⇗\"):::active---1269ICP5(\"July 2024: 240\")\nclick cICP5T00C07 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318069413]\" \"Go to Ads\"\ncICP4 --- cICP4T00C08(\"Unaware | WV | Fleet | Single Image | Website Visits (T00C08)\")---1270ICP4(\"July 2024: 442\")\ncICP6 --- cICP6T00C09(\"Unaware | WV | HR | Single Image | Website Visits (T00C09)\")---1271ICP6(\"July 2024: 442\")\ncICP5 --- cICP5T00C10(\"Unaware | WV | Commercial Heads | Single Image | Website Visits (T00C10)\")---1272ICP5(\"July 2024: 444\")\nw0{{\"Warm Retargeting\\nAll Custom Audiences\\nJuly 2024: 900\"}}:::orange_stroke\nw0---w0T00C04(\" | Single Image | Engagement (T00C04)\\nClick to see Ads⇗\")---883T00C040(\"June 2024: 350\")\nclick w0T00C04 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[302581213]\" \"Go to Ads\"\nw0---w0T00C11(\"Aware | LG | Commercial TopMan  | Single Image | Lead Generation (T00C11)\")---1299T00C110(\"July 2024: 300\")\nw0---w0T00C12(\"Aware | LG | Fleet | Document | Lead Generation (T00C12)\\nClick to see Ads⇗\"):::active---1300T00C120(\"July 2024: 300\")\nclick w0T00C12 \"https://www.linkedin.com/campaignmanager/accounts/503868656/creatives?campaignIds=[318544423]\" \"Go to Ads\"\nw0---w0T00C13(\"Aware | LG | HR | Single Image | Lead Generation (T00C13)\")---1301T00C130(\"July 2024: 300\")\n\n\nclassDef blue stroke:#2374f7,stroke-width:3px\nclassDef orange_stroke stroke:#fc822b,stroke-width:3px\nclassDef red_stroke stroke:#ed2633,stroke-width:3px\nclassDef pink fill:#eb3dd6,stroke:#000,stroke-width:1px,color:#fff\nclassDef paused fill:#fabe08,stroke:#000,stroke-width:1px,color:#fff\nclassDef red fill:#ed2633,stroke:#000,stroke-width:1px,color:#fff\nclassDef active fill:#46af16,stroke:#000,stroke-width:1px,color:#fff\n\t\t</pre>\n\t\t<script type=\"module\">\n\t\t\timport mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';\n\t\t</script>\n\t</body>\n</html>
